--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,81 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global Styles */
+
+body {
+    margin: 0;
+    background-color: #fff; /* Light background color */
+    color: teal; /* Text color */
+  }
+  
+  /* Header Styles */
+  
+  app-navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  
+  /* Section Styles */
+  
+  .router-container {
+    margin-top: 60px; /* Adjusted margin to accommodate the fixed navbar */
+  }
+  
+  /* Footer Styles */
+  
+  footer {
+    background-color: #333; /* Dark background color */
+    color: #fff; /* Light text color */
+    padding: 20px;
+    text-align: center;
+  }
+  
+  /* Navbar Styles */
+  
+  .navbar {
+    background-color: #00796b; /* Teal background color */
+    padding: 10px 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  li {
+    margin: 0;
+  }
+  
+  a {
+    text-decoration: none;
+    color: teal; /* White text color */
+    font-weight: bold;
+    transition: color 0.3s ease; /* Smooth color transition */
+  }
+  
+  a:hover {
+    color: #ffab40; /* Orange color on hover */
+  }
+  
+  /* Custom Section Styles (Adjust as needed) */
+  
+  .about-me-container,
+  .skills-container,
+  .education-container,
+  .work-experience-container {
+    background-color: #6e6c6c; /* White background color for sections */
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
+  }
+  
+  h2 {
+    color: #00796b; /* Teal color for section headings */
+  }
+  
+  /* Customize styles for other elements and sections as needed */
+  
