about me has more text, resume has text and welcome is now reactive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,67 @@
-<p>about-me works!</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Me</title>
+        <style>
+        
+    </style>
+    </head>
+    <body>
+
+        <div class="container">
+            <div class="column left-column">
+                <div class="picture-container">
+                    <div class="picture-overlay"></div>
+                    <img src="..//src//assets//photo.jpg" alt="Your Picture">
+                </div>
+                <h2>My philosophy</h2>
+                <p>
+
+                </p>
+
+                <h2>My values</h2>
+                <p>
+
+                </p>
+            </div>
+
+            <div class="column right-column">
+                <h2>Professional Life</h2>
+                <p>
+                    I've been curious ever since I was a kid
+                    and that curiosity led me to study a bachelor in science, in
+                    Engineering Physics. Most of the time I spent on the
+                    bachelor was coding and
+                    simulating physical phenomena, those choices and interests
+                    inclined me to do a thesis on quantum cryptography and
+                    machine learning, which you can read
+                    <a
+                        href="http://repositorio.ugto.mx/handle/20.500.12059/6387">here</a>.
+                    <br> <br>
+                    During the bachelor I made the choice to work on fields of
+                    data
+                    science or/and cybersecurity.
+                    I've worked with several big data sets for corporative and
+                    marketing
+                    purposes. I've also had the roles of system and server
+                    manager where
+                    I had understand and learned more about cybersecurity and
+                    networks.
+                    <br> <br>
+                    Apart from working, coding and learning, I enjoy making
+                    music on my spare time as an artistic activity,
+                    I love hiking and riding mountain bike on the summer,
+                    I try to have a balance with mind, body and soul.
+                    When these three parts are in balance, everything goes like
+                    clockwork.
+                </p>
+                <div class="button-container">
+                    <button>Contact me</button>
+                </div>
+            </div>
+        </div>
+
+    </body>
+</html>
