--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -16,15 +16,16 @@
                     <div class="picture-overlay"></div>
                     <img src="..//src//assets//photo.jpg" alt="Your Picture">
                 </div>
-                <h2>My philosophy</h2>
-                <p>
 
-                </p>
+                <blockquote>
+                    <!-- <h2>My philosophy</h2> -->
+                    <p>
+                        With patience and passion, anything is possible. 
+                        Stay present and focus on what you have, 
+                        to create the future you desire."
+                    </p>
+                </blockquote>
 
-                <h2>My values</h2>
-                <p>
-
-                </p>
             </div>
 
             <div class="column right-column">
