--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,13 +5,16 @@
         I'm an engineering physics graduate <br>
         with skills in data science <br>
         and software development. </p>
-      <button class="banner-button">See more about me</button>
+      <button class="banner-button">See more about me</button> 
     </div>
+
       <div class="typewriter-banner">
         <div class="typewriter-container">
+          <!-- <img src="..//../assets/JG.png" class="banner-image"> -->
           <span class="typed-text">{{ typedText }}</span>
         </div>
       </div>
+
   </div>
 
 
