--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar">
-    <div>
-    <li><a routerLink="/">Jonathan Gonzalez</a></li> 
-    - Analysis & Development 
+  <div>
+    <a routerLink="/">Jonathan Gonzalez </a>
+    &nbsp;-&nbsp;Analysis & Development
   </div>
-  
-    <ul>
-      <li><a routerLink="/work-experience">Resume</a></li>
-      <li><a routerLink="/projects">Projects</a></li>
-      <li><a routerLink="/about-me">About Me</a></li>
-      <!-- Add more links for other sections if needed -->
-    </ul>
-  </nav>
-  
+
+  <ul>
+    <li><a routerLink="/projects">Portfolio &nbsp;</a></li> 
+    <li><a routerLink="/work-experience">Resume &nbsp;</a></li>
+    <li><a routerLink="/about-me">About Me &nbsp;</a></li>
+    <li><a routerLink="/contact-me">Contact &nbsp;</a></li>
+    <!-- Add more links for other sections if needed -->
+  </ul>
+</nav>
