--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -11,14 +11,25 @@ img {
     margin-bottom: 10px;
 }
 
+q {
+    position: center;
+    font-size: 18pt;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 100px;
+  }
+  
+ 
+
 .container {
     display: flex;
     justify-content: center;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .column {
-    width: 48%;
+    width: 100%;
     box-sizing: border-box;
     padding: 20px;
     background-color: #fff;
@@ -34,11 +45,15 @@ img {
     padding: 75px 75px;
     border-radius: 8px;
     margin-bottom: 10px;
+    float: left;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+
     /* align-content: right; */
 }
 
 .right-column {
-    width: 48%;
+    width: 50%;
     box-sizing: border-box;
     padding: 100px;
     background-color: #fff;
@@ -46,6 +61,11 @@ img {
     font-size: 22px;
     line-height: 30px;
     color: #333;
+    float: left;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+
+
 }
 
 .picture-container {
@@ -71,6 +91,8 @@ img {
     align-content: right;
     text-align: right;
 }
+
+
 
 button {
     padding: 20px 40px;
@@ -102,4 +124,71 @@ button {
     box-shadow: 0 0 9e9q inset #0009;
     background-color: var(--c);
     color: #fff;
+  }
+
+  blockquote {
+    width: 100%;
+    color: #f8fcf8;
+    margin-left: -50px;
+    padding: 36px 50px;
+    position: relative;
+    background:#01796f;
+    margin-bottom: -100px;
+    &::before, &::after {
+      top: 0;
+      bottom: 0;
+      width: 25px;
+      content: '';
+      position: absolute;
+      background: #01796f;
+      box-shadow: 0 2px rgba(0,0,0,.25);
+    }
+    &::before {
+      right: 100%;
+    }
+    &::after {
+      left: 100%;
+    }
+    h2{
+      color: #f3f8f3;
+      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2),-2px -2px 4px rgba(0, 0, 0, 1);
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-top: -12px;
+    font-size: 20pt; /* Increased font size to 14pt */
+    padding-bottom: 8px;
+    }
+    p {
+      margin: 0;
+      font-size: 1.5em;
+      &::before {
+        top: 0;
+        left: 32px;
+        color: #e3e3e3;
+        content: '“';
+        font-size: 3em;
+        position: absolute;
+        text-shadow: -3px 0 #c2c2c2;
+        text-align: start;
+      }
+      &::after {
+        right: 32px;
+        color: #e3e3e3;
+        content: '”';
+        bottom: -32px;
+        font-size: 3em;
+        position: absolute;
+        text-shadow: 3px 0 #c2c2c2;
+      }
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .left-column,
+    .right-column {
+      flex: 0 0 100%;
+    }
   }
