--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,6 +6,13 @@
   align-items: flex-start;
 }
 
+.banner-img {
+  max-width: 5%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
 
 .banner-text {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -98,7 +105,7 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1200px) {
   .container {
     flex-direction: column;
   }
@@ -110,6 +117,7 @@
   .typewriter-banner {
     margin-right: 0;
     font-size: 24pt;
+    padding-top: 50px;
     /* Adjust margin for responsiveness */
   }
 
