--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -35,3 +35,9 @@
     color: white;
     text-decoration: none; /* Optional: remove underline from links */
   }
+
+  .navbar-image {
+    max-width: 20px;
+    border-radius: 2px;
+    margin-bottom: auto;
+  }
