--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* Global Styles */
 
+@import '~@fortawesome/fontawesome-free/css/all.css';
 body {
     margin: 0;
     background-color: #fff; /* Light background color */
